--- a/index.html
+++ b/index.html
@@ -5,7 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Static Template</title>
-    <link rel="stylesheet" href="./style.css"
+    <link
+      rel="stylesheet"
+      href="./style.css"
+      <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Homemade+Apple&family=Homenaje&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="container">
