membuat header section

--- a/index.html
+++ b/index.html
@@ -12,14 +12,21 @@
       rel="preconnect"
       href="https://fonts.gstatic.com"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Homemade+Apple&family=Homenaje&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Bungee&family=Homemade+Apple&display=swap"
       rel="stylesheet"
     />
   </head>
   <body>
     <div class="container">
-      <div class="frame"></div>
+      <div class="frame">
+        <div class="header">
+          <button class="header-btn">Add</button>
+          <h1 class="header-title">Todo Lists</h1>
+          <button class="header-btn main-red-color">Clear</button>
+        </div>
+      </div>
     </div>
   </body>
 </html>
