--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="container">
       <div class="frame">
         <section class="header">
-          <button class="header-btn">Add</button>
+          <button class="header-btn main-black-color">Add</button>
           <h1 class="header-title">Todo Lists</h1>
           <button class="header-btn main-red-color">Clear</button>
         </section>
@@ -30,8 +30,14 @@
         <section class="add">
           <form class="add-form">
             <input type="text" class="add-input" />
-            <button class="add-btn">Add</button>
+            <button class="add-btn main-black-color">Add</button>
           </form>
+        </section>
+
+        <section class="todos">
+          <class class="todo">
+            <span class="todo-text">Learning React</span>
+          </class>
         </section>
       </div>
     </div>
