--- a/index.html
+++ b/index.html
@@ -29,25 +29,43 @@
       class App extends React.Component {
         render() {
           return (
-            <div class="container">
-              <div class="frame">
-                <section class="header">
-                  <button class="header-btn main-black-color">Add</button>
-                  <h1 class="header-title">Todo Lists</h1>
-                  <button class="header-btn main-red-color">Clear</button>
+            <div className="container">
+              <div className="frame">
+                <section className="header">
+                  <button className="header-btn main-black-color">Add</button>
+                  <h1 className="header-title">Todo Lists</h1>
+                  <button className="header-btn main-red-color">Clear</button>
                 </section>
 
-                <section class="add">
-                  <form class="add-form">
+                <section className="add">
+                  <form className="add-form">
                     <input type="text" class="add-input" />
-                    <button class="add-btn main-black-color">Add</button>
+                    <button className="add-btn main-black-color">Add</button>
                   </form>
                 </section>
 
-                <section class="todos">
-                  <class class="todo">
-                    <span class="todo-text">Learning React</span>
-                  </class>
+                <section className="todos">
+                  <div className="todo">
+                    <span className="todo-text">Learning React</span>
+                  </div>
+                  <div className="todo">
+                    <span className="todo-text">Learning React</span>
+                  </div>
+                  <div className="todo">
+                    <span className="todo-text">Learning React</span>
+                  </div>
+                  <div className="todo">
+                    <span className="todo-text">Learning React</span>
+                  </div>
+                  <div className="todo">
+                    <span className="todo-text">Learning React</span>
+                  </div>
+                  <div className="todo">
+                    <span className="todo-text">Learning React</span>
+                  </div>
+                  <div className="todo">
+                    <span className="todo-text">Learning React</span>
+                  </div>
                 </section>
               </div>
             </div>
